Item15539: fixed z-index of datepicker

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/ui/themes/foswiki/jquery-ui.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/ui/themes/foswiki/jquery-ui.uncompressed.css
@@ -650,7 +650,6 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-progressbar .ui-progressbar-value {
 	margin: -1px;
-        padding-right:5px;
 	height: 100%;
 }
 .ui-progressbar .ui-progressbar-overlay {
@@ -1952,8 +1951,6 @@ body .ui-tooltip {
 /* Datepicker 
 ----------------------------------*/
 input.jqUIDatepicker {
-  position:relative;
-  z-index: 3;
   height:2em;
 }
 .ui-datepicker { 
